test/files/neg/t7187-deprecation.check
t7187-deprecation.scala:17: error: type mismatch;
 found   : Int
 required: () => Any
  val t1: () => Any  = m1   // error
                       ^
t7187-deprecation.scala:19: error: type mismatch;
 found   : Int
 required: AcciSamZero
  val t2AcciSam: AcciSamZero = m2 // error, nilary methods don't eta-expand to SAM types
                               ^
t7187-deprecation.scala:20: error: type mismatch;
 found   : Int
 required: SamZero
  val t2Sam: SamZero = m2         // error, nilary methods don't eta-expand to SAM types
                       ^
t7187-deprecation.scala:24: warning: Auto-application to `()` is deprecated. Supply the empty argument list `()` explicitly to invoke method m2,
or remove the empty argument list from its definition (Java-defined methods are exempt).
In Scala 3, an unapplied method like this will be eta-expanded into a function. [quickfixable]
  val t5 = m2 // warn: apply, ()-insertion
           ^
t7187-deprecation.scala:31: error: Methods without a parameter list and by-name params can no longer be converted to functions as `m _`, write a function literal `() => m` instead [quickfixable]
Scala 3 migration messages are errors under -Xsource:3. Use -Wconf / @nowarn to filter them or add -Xmigration to demote them to warnings.
Applicable -Wconf / @nowarn filters for this fatal warning: msg=<part of the message>, cat=scala3-migration, site=EtaExpand214.t7
  val t7 = m1 _ // error: eta-expanding a nullary method
           ^
t7187-deprecation.scala:40: warning: Auto-application to `()` is deprecated. Supply the empty argument list `()` explicitly to invoke method boom,
or remove the empty argument list from its definition (Java-defined methods are exempt).
In Scala 3, an unapplied method like this will be eta-expanded into a function. [quickfixable]
  a.boom // warning: apply, ()-insertion
    ^
2 warnings
4 errors
